Added a theme preview image.

--- a/themes/angelo/theme.yaml
+++ b/themes/angelo/theme.yaml
@@ -3,3 +3,4 @@ description: 'A theme for Angelo Lovato for the OctoberCMS framework.'
 author: Paul E. Lovato
 homepage: 'https://angelolovatoart.com'
 code: 'oc-cleanse-angelo'
+previewImage: 'assets/images/theme-preview.jpg'
