Add hidden flag to backend.

--- a/plugins/cleanse/kingofart/models/creation/fields.yaml
+++ b/plugins/cleanse/kingofart/models/creation/fields.yaml
@@ -25,3 +25,8 @@ fields:
         label: Featured Content?
         type: checkbox
         default: false
+
+    is_hidden:
+            label: Hide Content?
+            type: checkbox
+            default: false
